# AIzone

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
aizone/: __init__.py
aizone/data/: generate_dataset.py
aizone/evaluation/: match_answer.py  run_eval.py
aizone/evaluation/grading/: math_grader.py
aizone/serving/: async_tokenizer.py  openai_api_server.py
aizone/tests/: test_model_config.py
aizone/training_deepspeed/: openchat_dataset.py  train.py
ochat/config/: __init__.py
ochat/models/: __init__.py
ochat/serving/: async_tokenizer.py
