[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "AIzone"
description = "Full artificial intelligence developed by INDEX"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Full artificial intelligence developed by INDEX",
]
dependencies = [
    "colorama",
    "beautifulsoup4", 
    "markdownify", 
    "pylatexenc",
    "sympy",
    "openai>=1",
    "tenacity", 
    "tiktoken", 
    "tqdm", 
    "wandb", 
    "numba", 
    "datasets", 
    "orjson", 
    "torch", 
    "packaging",
    "ninja",
    "flash-attn",
    "ray", 
    "sentencepiece", 
    "transformers>=4.40.1", 
    "accelerate", 
    "protobuf",
    "fastapi", 
    "pydantic", 
    "shortuuid", 
    "uvicorn", 
    "vllm>=0.4.0",
    "pytest"
]


[tool.setuptools.packages.find]
exclude = ["assets*", "ochat/experimental*"]

[tool.wheel]
exclude = ["assets*", "ochat/experimental*"]

[tool.setuptools_scm]
